update book
