# book-store-management-backend/docs/swagger.json
@@ -75,6 +75,33 @@
                 }
             }
         },
+        "/books": {
+            "get": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "books"
+                ],
+                "summary": "Get all books",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/bookmodel.Book"
+                        }
+                    }
+                }
+            }
+        },
         "/categories": {
             "get": {
                 "security": [
@@ -192,6 +219,9 @@
                     "$ref": "#/definitions/common.Paging"
                 }
             }
+        },
+        "bookmodel.Book": {
+            "type": "object"
         },
         "categorymodel.Category": {
             "type": "object",
