# book-store-management-backend/module/book/booktransport/route.go
@@ -7,6 +7,14 @@ import (
 	"github.com/gin-gonic/gin"
 )
 
+// @BasePath /v1
+// @Security BearerAuth
+// @Summary Get all books
+// @Tags books
+// @Accept json
+// @Produce json
+// @Response 200 {object} bookmodel.Book
+// @Router /books [get]
 func SetupRoutes(router *gin.RouterGroup, appCtx appctx.AppContext) {
 	books := router.Group("/books", middleware.RequireAuth(appCtx))
 	{
